--- a/style.css
+++ b/style.css
@@ -31,15 +31,34 @@ main {
 }
 
 button {
+    background: none;
     color: #ff5e84;
     border: none;
     font-weight: bold;
-    background: none;
+
+    cursor: pointer;
+
+    outline: none;
+}
+
+button:hover {
+    text-decoration: underline;
 }
 
 button.fat {
     color: white;
     background: #ff5e84;
+
+    width: 150px;
+    height: 40px;
+
+    border-radius: 6px;
+    
+    box-shadow: 0px 8px 16px #ff5e8432;
+}
+
+button.fat:hover {
+    text-decoration: none;
 }
 
 footer {
