--- a/style.css
+++ b/style.css
@@ -5,6 +5,21 @@ body {
     margin: 0;
 }
 
+.hide {
+    display: none;
+}
+
+a {
+    color: #ff5e84;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+
+}
+
 #container {
     width: 90%;
     max-width: 980px;
@@ -53,7 +68,7 @@ button.fat {
     height: 40px;
 
     border-radius: 6px;
-    
+
     box-shadow: 0px 8px 16px #ff5e8432;
 }
 
@@ -65,11 +80,34 @@ footer {
     text-align: center;
 }
 
-footer a {
-    color: #25282b;
-    text-decoration: none;
+.idea {
+    display: flex;
+
+    background-color: #fff;
+    box-shadow: 0 4px 16px -8px rgb(1, 1, 1, 0.1);
+    border-radius: 8px;
+
+    padding: 32px;
+
+    margin-bottom: 32px;
 }
 
-.hide {
-    display: none;
+.idea img {
+    width: 60px;
+    height: 60px;
+
+    margin-right: 32px;
+}
+
+.idea h3 {
+    margin: 0;
+}
+
+.idea p {
+    margin: 8px 0;
+    color: #777;
+}
+
+.ideia .description {
+    margin: 16px 0;
 }
