--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     background: #e5e5e5;
     color: #25282b;
 
+    font-family: 'Montserrat', sans-serif;
+
     margin: 0;
 }
 
@@ -17,7 +19,12 @@ a {
 
 a:hover {
     text-decoration: none;
+}
 
+P, .description {
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.1px;
 }
 
 #container {
@@ -42,6 +49,7 @@ main {
 #buttons {
     display: flex;
     justify-content: space-evenly;
+
     margin-bottom: 32px;
 }
 
@@ -49,7 +57,11 @@ button {
     background: none;
     color: #ff5e84;
     border: none;
+
+    font-size: 14px;
     font-weight: bold;
+    line-height: 18px;
+    letter-spacing: 0.2px;
 
     cursor: pointer;
 
@@ -78,6 +90,17 @@ button.fat:hover {
 
 footer {
     text-align: center;
+
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.2px;
+
+    color: #777;
+}
+
+footer a {
+    opacity: 0.7;
 }
 
 .idea {
