--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@ body {
     margin: 0;
 }
 
-.hide {
-    display: none;
-}
+
 
 a {
     color: #ff5e84;
@@ -21,14 +19,15 @@ a:hover {
     text-decoration: none;
 }
 
-P, .description {
+P,
+.description {
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.1px;
 }
 
 #container {
-    width: 90%;
+    width: 80%;
     max-width: 980px;
 
     margin: 40px auto;
@@ -133,4 +132,90 @@ footer a {
 
 .ideia .description {
     margin: 16px 0;
+}
+
+#modal {
+    background: #ff5e84;
+
+    position: absolute;
+    top: 0;
+
+    width: 100vw;
+    height: 150vh;
+
+    display: flex;
+    justify-content: center;
+}
+
+#modal .content {
+    margin-top: 128px;
+
+    color: white;
+}
+
+#modal .content h1 {
+    text-align: center;
+
+    text-transform: uppercase;
+}
+
+#modal form {
+    width: 80%;
+    max-width: 800px;
+
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    gap: 20px;
+}
+
+.content form div:nth-child(3),
+.content form div:nth-child(4),
+.content form div:nth-child(5) {
+    grid-column: span 2;
+}
+
+form input, 
+form textarea {
+    width: 100%;
+
+    box-sizing: border-box;
+    
+    border-radius: 6px;
+    border: 1px solid rgb(141, 25, 52, 0.5);
+
+    outline: none;
+
+    font-size: 25px;
+}
+
+form label {
+    font-weight: 600;
+    line-height: 32px;
+    letter-spacing: 0.8px;
+}
+
+form button {
+    background: white;
+
+    width: 150px;
+    height: 40px;
+
+    border-radius: 6px;
+
+    cursor: pointer;
+
+    margin-top: 32px;
+
+    grid-column: 2;
+    justify-self: end;
+}
+
+form button:hover{
+    background-color: #0984e3;
+    color: white;
+
+    text-decoration: none;
 }
