--- a/style.css
+++ b/style.css
@@ -191,6 +191,32 @@ form textarea {
     font-size: 25px;
 }
 
+form a {
+    width: 150px;
+    height: 40px;
+
+    background-color: #ffffff22;
+    color: white;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 14px;
+    border-radius: 6px;
+
+    align-self: end;
+
+    transition: 400ms;
+}
+
+form a:hover {
+    background: #fff;
+    color: #ff5e84;
+
+    text-decoration: none;
+}
+
 form label {
     font-weight: 600;
     line-height: 32px;
@@ -210,7 +236,10 @@ form button {
     margin-top: 32px;
 
     grid-column: 2;
+
     justify-self: end;
+    
+    transition: 400ms;
 }
 
 form button:hover{
@@ -221,5 +250,6 @@ form button:hover{
 }
 
 #modal.hide {
-    display: none;
+    opacity: 0;
+    visibility: hidden;
 }
