--- a/style.css
+++ b/style.css
@@ -305,3 +305,30 @@ form button:hover{
     background-color: #0984e3;
     text-decoration: none;
 }
+
+section#title {
+    text-align: center;
+    margin: 64px 0;
+}
+
+section#title p {
+    opacity: 0.7;
+    margin: 0;
+}
+
+section#title h1 {
+    margin: 0;
+
+    font-size: 28px;
+}
+
+section#ideas {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    gap: 20px;
+}
+
+section#ideas .idea {
+    margin: 0;
+}
