--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@ body {
     color: #25282b;
 
     font-family: 'Montserrat', sans-serif;
-
     margin: 0;
 }
 
-
+body.hideScroll {
+    overflow: hidden;
+}
 
 a {
     color: #ff5e84;
@@ -139,9 +140,9 @@ footer a {
 
     position: absolute;
     top: 0;
-
-    width: 100vw;
-    height: 150vh;
+    bottom: 0;
+    right: 0;
+    left: 0;
 
     display: flex;
     justify-content: center;
@@ -149,8 +150,13 @@ footer a {
     transition: 400ms;
 }
 
+#modal.addScroll {
+    overflow: auto;
+}
+
 #modal .content {
-    margin-top: 128px;
+    margin-top: 0;
+    margin-bottom: auto;
 
     color: white;
 }
@@ -165,7 +171,7 @@ footer a {
     width: 80%;
     max-width: 800px;
 
-    margin: 0 auto;
+    margin: 0 auto 15%;
 
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -190,7 +196,7 @@ form textarea {
 
     outline: none;
 
-    font-size: 25px;
+    font-size: 14px;
 }
 
 form a {
@@ -308,7 +314,6 @@ form button:hover{
 
 section#title {
     text-align: center;
-    margin: 64px 0;
 }
 
 section#title p {
@@ -331,4 +336,10 @@ section#ideas {
 
 section#ideas .idea {
     margin: 0;
+}
+
+section#title,
+section#ideas,
+footer {
+    margin-top: 64px;
 }
