--- a/style.css
+++ b/style.css
@@ -27,6 +27,30 @@ P,
     letter-spacing: 0.1px;
 }
 
+.button {
+    color: white;
+    background: #ff5e84;
+
+    width: 150px;
+    height: 40px;
+
+    border-radius: 8px;
+
+    font-size: 14px;
+    font-weight: bold;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    box-shadow: 0px 8px 16px #ff5e8432;
+}
+
+.button:hover {
+    background-color: #0984e3;
+    text-decoration: none
+}
+
 #container {
     width: 80%;
     max-width: 980px;
@@ -70,22 +94,6 @@ button {
 
 button:hover {
     text-decoration: underline;
-}
-
-button.fat {
-    color: white;
-    background: #ff5e84;
-
-    width: 150px;
-    height: 40px;
-
-    border-radius: 6px;
-
-    box-shadow: 0px 8px 16px #ff5e8432;
-}
-
-button.fat:hover {
-    text-decoration: none;
 }
 
 footer {
@@ -286,30 +294,12 @@ form button:hover{
     color: #25282b;
 }
 
+#page-ideas nav li a.button {
+    color: white;
+}
+
 #page-ideas nav li:last-child {
     margin: 0;
-}
-
-#page-ideas nav li:last-child a {
-    width: 150px;
-    height: 40px;
-
-    background-color: #ff5e84;
-    color: white;
-
-    font-size: 14px;
-    font-weight: bold;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    border-radius: 8px;
-}
-
-#page-ideas nav li:last-child a:hover {
-    background-color: #0984e3;
-    text-decoration: none;
 }
 
 section#title {
