--- a/views/ideias.html
+++ b/views/ideias.html
@@ -1,97 +1,36 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+{% extends "layout.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Ideias - Casa Criativa</title>
+{% set bodyId = "page-ideas" %}
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+{% block title %}
+<title>Ideias - Casa Criativa</title>
+{% endblock title %}
 
-</head>
+{% block content %}
 
-<body id="page-ideas">
-    <div id="container">
-        <header>
-            <a href="/">
-                <img src="/logo.png" alt="Imagem da Logomarca">
-            </a>
-            <nav>
-                <li><a href="/">Início</a></li>
-                <li><a class="button" href="#" onclick="onOff()">Nova Ideia</a></li>
-            </nav>
-        </header>
+<header>
+    <a href="/">
+        <img src="/logo.png" alt="Imagem da Logomarca">
+    </a>
+    <nav>
+        <li><a href="/">Início</a></li>
+        <li><a class="button" href="#" onclick="onOff()">Nova Ideia</a></li>
+    </nav>
+</header>
 
-        <section id="title">
-            <p>em exibição</p>
-            <h1>Ideias</h1>
-        </section>
+<section id="title">
+    <p>em exibição</p>
+    <h1>Ideias</h1>
+</section>
 
-        <main>
-            <section id="ideas">
-                {% for idea in ideas %}
-                <div class="idea">
-                    <img src="{{idea.img}}" alt="Imagem de {{idea.title}}">
+<main>
+    <section id="ideas">
+        {% include "all_ideas.html" %}
+    </section>
+</main>
 
-                    <div class="content">
-                        <h3>{{idea.title}}</h3>
-                        <p>{{idea.category}}</p>
-                        <div class="description">
-                            {{idea.description}}
-                        </div>
-                        <a href="{{idea.url}}" target="_blank">Ir para a Ideia</a>
-                    </div>
-                </div>
-                {% endfor %}
-            </section>
-        </main>
+<footer>
+    Com 💜 <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
+</footer>
 
-        <footer>
-            Com 💜 <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
-        </footer>
-    </div>
-
-    <div id="modal" class="hide">
-        <div class="content">
-            <h1>Nova Ideia</h1>
-
-            <form action="">
-
-                <div class="input-wrapper">
-                    <label for="title">Título da ideia</label>
-                    <input type="text" name="title">
-                </div>
-
-                <div id="input-wrapper">
-                    <label for="category">Categoria</label>
-                    <input type="text" name="category">
-                </div>
-
-                <div id="input-wrapper">
-                    <label for="image">Link da imagem</label>
-                    <input type="url" name="image">
-                </div>
-
-                <div id="input-wrapper">
-                    <label for="description">Digite uma descrição para essa ideia</label>
-                    <textarea name="description" id="" cols="30" rows="10"></textarea>
-                </div>
-
-                <div id="input-wrapper">
-                    <label for="link">Link da ideia</label>
-                    <input type="url" name="image">
-                </div>
-
-                <a href="#" onclick="onOff()">Voltar</a>
-                <button>Salvar</button>
-
-            </form>
-        </div>
-    </div>
-
-    <script src="/scripts.js"></script>
-</body>
-
-</html>
+{% endblock %}
