--- a/views/index.html
+++ b/views/index.html
@@ -1,115 +1,44 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Casa Criativa</title>
+{% block content %}
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
-</head>
+<section id="intro">
 
-<body>
-    <div id="container">
-        <section id="intro">
+    <header>
+        <a href="/">
+            <img src="/logo.png" alt="Imagem da Logomarca">
+        </a>
+    </header>
 
-            <header>
-                <a href="/">
-                    <img src="/logo.png" alt="Imagem da Logomarca">
-                </a>
-            </header>
+    <main>
+        <p>
+            Ficar em casa em períodos longos, não deve ser nada fácil.
+        </p>
 
-            <main>
-                <p>
-                    Ficar em casa em períodos longos, não deve ser nada fácil.
-                </p>
+        <p>
+            Por isso, iremos catalogar ideias, <strong>jogos, filmes, livros, cursos, dicas</strong> e tudo que
+            for
+            necessário
+            para tornar esse momento mais interessante.
+        </p>
 
-                <p>
-                    Por isso, iremos catalogar ideias, <strong>jogos, filmes, livros, cursos, dicas</strong> e tudo que
-                    for
-                    necessário
-                    para tornar esse momento mais interessante.
-                </p>
+        <p>
+            Comece clicando em ver ideias para ver as ideias cadastradas e contribua adicionando a sua ideia
+        </p>
+    </main>
 
-                <p>
-                    Comece clicando em ver ideias para ver as ideias cadastradas e contribua adicionando a sua ideia
-                </p>
-            </main>
+    <section id="buttons">
+        <button onclick="onOff()">+ Adicionar Ideia</button>
+        <a href="/ideias" class="button">Ver Ideias</a>
+    </section>
 
-            <section id="buttons">
-                <button onclick="onOff()">+ Adicionar Ideia</button>
-                <a href="/ideias" class="button">Ver Ideias</a>
-            </section>
+    <footer>Com 💜 <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
+    </footer>
 
-            <footer>Com 💜 <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
-            </footer>
+</section>
 
-        </section>
+<section id="last-ideias">
+    {% include "all_ideas.html" %}
+</section>
 
-        <section id="last-ideias">
-
-            {% for idea in ideas %}
-            <div class="idea">
-                <img src="{{idea.img}}" alt="Imagem de {{idea.title}}">
-
-                <div class="content">
-                    <h3>{{idea.title}}</h3>
-                    <p>{{idea.category}}</p>
-                    <div class="description">
-                        {{idea.description}}
-                    </div>
-                    <a href="{{idea.url}}" target="_blank">Ir para a Ideia</a>
-                </div>
-            </div>
-            {% endfor %}
-
-
-
-        </section>
-
-    </div>
-
-    <div id="modal" class="hide">
-        <div class="content">
-            <h1>Nova Ideia</h1>
-
-            <form action="">
-
-                <div class="input-wrapper">
-                    <label for="title">Título da ideia</label>
-                    <input type="text" name="title">
-                </div>
-
-                <div id="input-wrapper">
-                    <label for="category">Categoria</label>
-                    <input type="text" name="category">
-                </div>
-
-                <div id="input-wrapper">
-                    <label for="image">Link da imagem</label>
-                    <input type="url" name="image">
-                </div>
-
-                <div id="input-wrapper">
-                    <label for="description">Digite uma descrição para essa ideia</label>
-                    <textarea name="description" id="" cols="30" rows="10"></textarea>
-                </div>
-
-                <div id="input-wrapper">
-                    <label for="link">Link da ideia</label>
-                    <input type="url" name="image">
-                </div>
-
-                <a href="#" onclick="onOff()">Voltar</a>
-                <button>Salvar</button>
-
-            </form>
-        </div>
-    </div>
-
-    <script src="/scripts.js"></script>
-</body>
-
-</html>
+{% endblock %}
