fix: validating new ideas form values

--- a/views/ideias.html
+++ b/views/ideias.html
@@ -14,7 +14,7 @@
     </a>
     <nav>
         <li><a href="/">Início</a></li>
-        <li><a class="button" href="#" onclick="onOff()">Nova Ideia</a></li>
+        <li><a class="button" onclick="onOff()">Nova Ideia</a></li>
     </nav>
 </header>
 
