--- a/views/modal.html
+++ b/views/modal.html
@@ -26,7 +26,7 @@
 
             <div id="input-wrapper">
                 <label for="link">Link da ideia</label>
-                <input type="url" name="image">
+                <input type="url" name="link">
             </div>
 
             <a href="" onclick="onOff()">Voltar</a>
